Correct alignment of project listing meta links.

--- a/_src/css/components/list-project.css
+++ b/_src/css/components/list-project.css
@@ -100,7 +100,7 @@
       font-size: var(--size-step-00);
     }
   }
-  .swap .secondary {
+  [data-direction="rtl"] .secondary {
     justify-content: flex-end;
   }
 }
